tests/pass/list_instance.us
struct List<T> {
    head:T,
    body:T
}

fn main() -> List<i32> {
    let list = List::<i32> {
        head:10,
        body:10
    };

    list;
}
