tests/fail/not_struct_alias.us
type char = u8;

struct List {
    head:i32,
    body:nil
}

fn main() -> List {
    let list = char {
        head:10,
        body:nil
    };

    list;
}